@@ -1,5 +1,7 @@
 2005-09-01  Pete's account  <Peter.Richardson@durham.ac.uk>
 
+	* Hadronization/PartonSplitter.h (Repository): changes to the hadronization to ensure only the taggws particles are hadronized.
+
 	* PDT/GenericWidthGenerator.icc (Repository): S->VV shape and naive running width option added
 
 	* Decay/ScalarMeson/PScalarVectorFermionsDecayer.cc (Repository): various minor fixes to the decay classes.
